k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inspekt
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
  creationTimestamp: null
spec:
  tls:
  - hosts:
    - deepmush.io
    - pgadmin.deepmush.io
    - mongo-express.deepmush.io
    - backend.deepmush.io
    - kibana.deepmush.io
    - grafana.deepmush.io
    secretName: letsencrypt-account-key
  rules:
  - host: pgadmin.deepmush.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              name: http
  - host: mongo-express.deepmush.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express
            port:
              name: http
  - host: backend.deepmush.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              name: http
  - host: kibana.deepmush.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elk
            port:
              name: http
  - host: grafana.deepmush.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              name: http
